--- a/styles/style.css
+++ b/styles/style.css
@@ -50,3 +50,26 @@ p {
 .header-image > img {
   width: 100%;
 }
+
+/* responsive for mobile device */
+@media only screen and (max-width: 576px) {
+  .header-container {
+    padding: 30px 72px 0px;
+  }
+  .header-content h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  .header-content > button {
+    font-size: 10px;
+    padding: 10px 20px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+  p {
+    font-size: 14px;
+  }
+  .header-image > img {
+    width: 100%;
+  }
+}
